# wesl-rs

./: Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci-comment-failures.yml  ci.yml  dependencies.yml  weekly.yml  welcome.yml
crates/tokrepr-derive/: Cargo.toml
crates/wesl/: Cargo.toml  README.md
crates/wesl-c/: Cargo.toml  build.rs
crates/wesl-c/include/: wesl.h
crates/wesl-c/src/: lib.rs
crates/wesl-cli/: README.md
crates/wesl-macros/: Cargo.toml
crates/wesl-quote/: Cargo.toml  README.md
crates/wesl-test/: Cargo.toml
crates/wesl-test/tests/: testsuite.rs
crates/wesl-test/tests/snapshots/: testsuite__bevy::animate_shader.snap  testsuite__bevy::array_texture.snap  testsuite__bevy::automatic_instancing.snap  testsuite__bevy::bindless_material.snap  testsuite__bevy::cubemap_unlit.snap  testsuite__bevy::custom_clustered_decal.snap  testsuite__bevy::custom_gltf_2d.snap  testsuite__bevy::custom_material.snap  testsuite__bevy::custom_material_2d.snap  testsuite__bevy::custom_material_screenspace_texture.snap  testsuite__bevy::custom_phase_item.snap  testsuite__bevy::custom_stencil.snap  testsuite__bevy::custom_ui_material.snap  testsuite__bevy::custom_vertex_attribute.snap  testsuite__bevy::extended_material.snap  testsuite__bevy::fallback_image_test.snap  testsuite__bevy::game_of_life.snap  testsuite__bevy::gpu_readback.snap  testsuite__bevy::instancing.snap  testsuite__bevy::irradiance_volume_voxel_visualization.snap  testsuite__bevy::line_material.snap  testsuite__bevy::post_processing.snap  testsuite__bevy::shader_defs.snap  testsuite__bevy::show_prepass.snap  testsuite__bevy::specialized_mesh_pipeline.snap  testsuite__bevy::storage_buffer.snap  testsuite__bevy::texture_binding_array.snap  testsuite__bevy::tonemapping_test_patterns.snap  testsuite__bevy::water_material.snap  testsuite__bulkTests::alpenglow::bicyclic_scan_03_lower_scan.wgsl.snap  testsuite__bulkTests::alpenglow::intersect_line_segments.wgsl.snap  testsuite__bulkTests::alpenglow::rasterize_04_coarse.wgsl.snap  testsuite__bulkTests::alpenglow::rasterize_05_fine.wgsl.snap  testsuite__bulkTests::alpenglow::u32_histogram_mod_256.wgsl.snap  testsuite__bulkTests::alpenglow::vec2u_merge.wgsl.snap  testsuite__bulkTests::alpenglow::vec2u_radix_ex_01_histogram.wgsl.snap  testsuite__bulkTests::alpenglow::vec2u_radix_ex_03_scan_middle.wgsl.snap  testsuite__bulkTests::alpenglow::vec2u_radix_ex_06_scatter.wgsl.snap  testsuite__bulkTests::unity_web_research::unity_webgpu_0000014DFB395020.fs.wgsl.snap  testsuite__bulkTests::unity_web_research::unity_webgpu_0000017E9E2D81A0.vs.wgsl.snap  (+245 more)
crates/wesl-web/: Cargo.toml
crates/wgsl-docsrs/: Cargo.toml
crates/wgsl-parse/: Cargo.toml  README.md
crates/wgsl-parse/src/: error.rs  lexer.rs  parser.rs  parser_support.rs  syntax.rs  syntax_display.rs  syntax_impl.rs  tokrepr.rs  wgsl.lalrpop
crates/wgsl-types/: Cargo.toml
(+101 files in other folders)
