[package]
name = "tokrepr-derive"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Derive macro for tokrepr"
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
itertools = "0.15.0"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "3.0.2"

[lints]
workspace = true
