[package]
name = "wesl-c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "C bindings for the WESL compiler"
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
wesl = { workspace = true }

[build-dependencies]
cbindgen = { version = "0.29.2", default-features = false }

[features]
eval = ["wesl/eval"]
generics = ["wesl/generics"]
naga = ["wesl/naga-ext"]

[lints]
workspace = true
