[package]
name = "wesl-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Test suite for the WESL compiler"
repository.workspace = true
license.workspace = true

[[test]]
harness = false
name = "testsuite"

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
bevy-wgsl = {
  git = "https://github.com/webgpu-tools/bevy-wgsl",
  rev = "79f97798c13143947df9b3b1dec5732991557e29"
}
libtest-mimic = "0.8.1"
serde_json = "1.0.140"
wesl = { workspace = true, features = ["eval", "naga-ext"] }
wgsl-parse = { workspace = true }
insta = { version = "1.48.0", features = ["yaml"] }

[lints]
workspace = true
